--- a/css/site.addons.css
+++ b/css/site.addons.css
@@ -41,3 +41,112 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+                          .vendor-item {
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border-radius: 16px;
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.04), 0px -2px 8px 0px rgba(0,0,0,0.04);
+    font-size: 0;
+}
+                           .vendor-item__link {
+    display: block;
+    position: relative;
+    background-color: #fff;
+    color: #2e2e33;
+    border-radius: inherit;
+    overflow: hidden;
+}
+.vendor-item__images {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    min-height: 164px;
+}.vendor-item__cover {
+    height: 164px;
+    display: block;
+    font-size: 0;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.vendor-item__wrap {
+    display: block;
+    padding: 16px;
+    font-size: 0;
+    position: relative;
+}
+.vendor-item__headrow {
+    display: block;
+    font-size: 0;
+}
+.vendor-item__title {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    padding-right: 4px;
+    font-weight: bold;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.vendor-item__title-text {
+    display: block;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 22px;
+    line-height: 28px;
+}
+.vendor-item__row {
+    display: flex;
+    font-size: 0;
+    margin-top: 4px;
+    flex-wrap: wrap;
+}
+.vendor-item__delivery-time--ddk {
+    color: #0ec645;
+}
+
+.vendor-item__delivery-time {
+    font-size: 12px;
+    line-height: 16px;
+    display: flex;
+    margin: 8px 8px 0 0;
+    padding: 6px 12px;
+    font-weight: bold;
+    color: #54545a;
+    background-color: #f6f6f6;
+    border-radius: 16px;
+}
+.icon__container {
+    font-size: 0;
+    display: inline-block;
+    line-height: normal;
+}
+.vendor-item__info-item {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px;
+    line-height: 16px;
+    margin: 8px 8px 0 0;
+    padding: 6px 12px;
+    font-weight: bold;
+    color: #54545a;
+    background-color: #f6f6f6;
+    border-radius: 16px;
+}
+.rating--in-card {
+    font-size: 12px;
+    line-height: 16px;
+    padding: 6px 12px;
+    margin: 8px 0 0 0;
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    background-color: #f6f6f6;
+    border-radius: 16px;
+}
+.vendor-item:hover {
+    transform: translateY(-4px);
+}
