--- a/css/site.addons.css
+++ b/css/site.addons.css
@@ -13,6 +13,11 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; */
 }
+.navbar .container{
+      display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .cart-line-items,tfoot{
   width: 280px;
   display: flex;
@@ -104,6 +109,7 @@
 }
 .vendor-item__row {
     display: flex;
+    justify-content: center;
     font-size: 0;
     margin-top: 4px;
     flex-wrap: wrap;
@@ -165,7 +171,7 @@
   min-height: 505px !important;
 }
 .appl-section .entry{
-  min-height: 485px !important;
+  min-height:945px !important;
 }
 .appl-section .menu .content .tabs .tab,.appl-section .tabs,.appl-section .tabs .tab{
   height: auto; 
@@ -189,4 +195,10 @@
 }
 .appl-section .modal-content .entry, .appl-section .modal-content .entry .tabs{
       max-height: 100px;
+}
+.modal{
+  max-height: 85% !important;
+}
+.modal-content img{
+  max-height: 500px !important;
 }
