--- a/css/site.addons.css
+++ b/css/site.addons.css
@@ -202,3 +202,13 @@
 .modal-content img{
   max-height: 500px !important;
 }
+
+/*фиксированное меню*/
+    .fixed {
+        box-shadow: #0000004a 1px 0 2px 6px;
+        top: 60px;
+        left: 0;
+        position: fixed;
+        z-index: 1001;
+        width: 100%;
+    }
