--- a/css/site.addons.css
+++ b/css/site.addons.css
@@ -1,14 +1,14 @@
 /* *{
   font-family: 'Montserrat-Bold', sans-serif !important;
-} */
-.panel-control-right img{
-  width: 100px;
-}
-.new_cart_cont{
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
+  } */
+  .panel-control-right img{
+    width: 100px;
+  }
+  .new_cart_cont{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
   /* -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap; */
@@ -17,9 +17,9 @@
   height: 70px;
 }
 .navbar .container{
-      display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .logo{
   display: flex;
@@ -66,45 +66,45 @@
 }
 
 .vendor-item {
-    margin-bottom: 16px;
-    box-sizing: border-box;
-    border-radius: 16px;
-    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.04), 0px -2px 8px 0px rgba(0,0,0,0.04);
-    font-size: 0;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  box-shadow: 0 8px 8px 0 rgba(0,0,0,0.04), 0px -2px 8px 0px rgba(0,0,0,0.04);
+  font-size: 0;
 }
 .vendor-item__link {
-    display: block;
-    position: relative;
-    background-color: #fff;
-    color: #2e2e33;
-    border-radius: inherit;
-    overflow: hidden;
+  display: block;
+  position: relative;
+  background-color: #fff;
+  color: #2e2e33;
+  border-radius: inherit;
+  overflow: hidden;
 }
 .vendor-item__images {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    min-height: 164px;
-}.vendor-item__cover {
+  display: block;
+  overflow: hidden;
+  position: relative;
+  min-height: 164px;
+  }.vendor-item__cover {
     height: 265px;
     display: block;
     font-size: 0;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-        background-position-y: center;
-}
-.vendor-item__wrap {
+    background-position-y: center;
+  }
+  .vendor-item__wrap {
     display: block;
     padding: 16px;
     font-size: 0;
     position: relative;
-}
-.vendor-item__headrow {
+  }
+  .vendor-item__headrow {
     display: block;
     font-size: 0;
-}
-.vendor-item__title {
+  }
+  .vendor-item__title {
     display: inline-block;
     vertical-align: middle;
     width: 100%;
@@ -112,8 +112,8 @@
     font-weight: bold;
     overflow: hidden;
     box-sizing: border-box;
-}
-.vendor-item__title-text {
+  }
+  .vendor-item__title-text {
     display: block;
     width: 100%;
     white-space: nowrap;
@@ -121,19 +121,19 @@
     text-overflow: ellipsis;
     font-size: 22px;
     line-height: 28px;
-}
-.vendor-item__row {
+  }
+  .vendor-item__row {
     display: flex;
     justify-content: center;
     font-size: 0;
     margin-top: 4px;
     flex-wrap: wrap;
-}
-.vendor-item__delivery-time--ddk {
+  }
+  .vendor-item__delivery-time--ddk {
     color: #0ec645;
-}
+  }
 
-.vendor-item__delivery-time {
+  .vendor-item__delivery-time {
     font-size: 12px;
     line-height: 16px;
     display: flex;
@@ -143,13 +143,13 @@
     color: #54545a;
     background-color: #f6f6f6;
     border-radius: 16px;
-}
-.icon__container {
+  }
+  .icon__container {
     font-size: 0;
     display: inline-block;
     line-height: normal;
-}
-.vendor-item__info-item {
+  }
+  .vendor-item__info-item {
     display: inline-block;
     vertical-align: middle;
     font-size: 12px;
@@ -160,8 +160,8 @@
     color: #54545a;
     background-color: #f6f6f6;
     border-radius: 16px;
-}
-.rating--in-card {
+  }
+  .rating--in-card {
     font-size: 12px;
     line-height: 16px;
     padding: 6px 12px;
@@ -171,86 +171,103 @@
     align-items: center;
     background-color: #f6f6f6;
     border-radius: 16px;
-}
-.appl-section .entry:hover {
+  }
+  .slider-slick img{
+    object-fit: contain;
+  }
+  .inst{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+    font: 20px;
+    margin-top: 10px;
+  }
+  .inst img{
+    width: 64px;
+    margin-right: 10px;
+  }
+  .appl-section .entry:hover {
     transform: translateY(-4px);
     box-shadow: 0px 7px 19px -1px rgba(172,172,179,0.3) !important;
-}
-.appl-section .entry, .menu-grid .entry{
-  margin-bottom: 20px;
-}
-.tel-fax-mail-head{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.tel-fax-mail-head img{
-  margin-right: 10px;
-}
-.tel-fax-mail-head a{
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-}
-.cards{
-  min-height: 505px !important;
-}
-.appl-section .tabs{
-  margin-top: 10px;
-}
-.appl-section .menu .content .tabs .tab,.appl-section .tabs,.appl-section .tabs .tab{
-  height: auto; 
-}
-.appl-section .modal-content .entry,.appl-section .modal-content .entry .tabs{
-  margin-bottom: 0 !important;
-  padding: 0 !important;
-}
- .appl-section .modal-content  .entry:hover {
+  }
+  .appl-section .entry, .menu-grid .entry{
+    margin-bottom: 20px;
+  }
+  .tel-fax-mail-head{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .tel-fax-mail-head img{
+    margin-right: 10px;
+  }
+  .tel-fax-mail-head a{
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .cards{
+    min-height: 505px !important;
+  }
+  .appl-section .tabs{
+    margin-top: 10px;
+  }
+  .appl-section .menu .content .tabs .tab,.appl-section .tabs,.appl-section .tabs .tab{
+    height: auto; 
+  }
+  .appl-section .modal-content .entry,.appl-section .modal-content .entry .tabs{
+    margin-bottom: 0 !important;
+    padding: 0 !important;
+  }
+  .appl-section .modal-content  .entry:hover {
     transform: none !important;
     box-shadow: none !important;
-}
-.appl-section .modal-content .row{
-  margin-bottom: 0 !important;
-}
+  }
+  .appl-section .modal-content .row{
+    margin-bottom: 0 !important;
+  }
 /* .modal{
   overflow: hidden;
-} */
-.appl-section .cards .modal .entry{
-  min-height:600px !important;
-}
-.maincard{
+  } */
+  .appl-section .cards .modal .entry{
+    min-height:600px !important;
+  }
+  .maincard{
     min-height:670px !important;
-}
-.menu .content .entry img, .menu-grid .entry img{
-      max-width: 300px;
-      height: 450px;
-      margin: 0 auto;
-}
+  }
+  .menu .content .entry img, .menu-grid .entry img{
+    max-width: 300px;
+    height: 450px;
+    margin: 0 auto;
+  }
 /* .menu .content .entry img, .menu-grid .entry img{
       max-width: 950px;
-} */
-.appl-section .modal-content .entry, .appl-section .modal-content .entry .tabs,.modal-content .entry .tabs img{
-      max-height: 150px !important;
-}
-.modal{
-  max-height: 85% !important;
-}
-.modal-content img{
- /*  max-height: 500px !important; */
-}
+      } */
+      .appl-section .modal-content .entry, .appl-section .modal-content .entry .tabs,.modal-content .entry .tabs img{
+        max-height: 150px !important;
+      }
+      .modal{
+        max-height: 85% !important;
+      }
+      .modal-content img{
+       /*  max-height: 500px !important; */
+     }
 
-/*фиксированное меню*/
-    .fixed {
-        box-shadow: #0000004a 1px 0 2px 6px;
-        top: 60px;
-        left: 0;
-        position: fixed;
-        z-index: 1001;
-        width: 100%;
+     /*фиксированное меню*/
+     .fixed {
+      box-shadow: #0000004a 1px 0 2px 6px;
+      top: 60px;
+      left: 0;
+      position: fixed;
+      z-index: 1001;
+      width: 100%;
     }
-.side-nav{
-  z-index: 1003;
-}
+    .side-nav{
+      z-index: 1003;
+    }
     .modal-content .entry img{
       max-width: 100% !important;
       height: 450px !important;
@@ -260,4 +277,13 @@
     }
 /*       {
       max-height: 100px !important;
-    } */
+      } */
+      @media (max-width:480px) {
+        .row .col.s6{
+          width: 100%;
+          max-width: 100%;
+        }
+        .site-title{
+          display: none;
+        }
+      }
